--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:OSiLv018SrEMk3cd+jUz84/X0W8LChea9lIAaJwFd0Q=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://jobsnow.test/
 
 LOG_CHANNEL=stack
