--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php-flasher/flasher-laravel": "^1.15"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.29",
